# cli-weather-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  weather.py
tests/: test_weather.py
