[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-weather-app"
version = "1.0.0"
description = "Consulta el clima actual desde la terminal usando Open-Meteo."
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]